--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -58,8 +58,7 @@
   <div id='header'>
     <div class="swagger-ui-wrap">
       <img style="background-color: white;" class="pull-left"
-        src="images/logo.jpg"> <b style="margin-bottom: 35px;"> IHTSDO
-        Mapping Service API</b>
+        src="images/logo.jpg" style="height:50px;"> <b style="margin-bottom: 35px;"> SNOMED Terminology Server REST API</b>
     </div>
   </div>
 
