Changed Claml loader to set published flag to true for all components Minor typo fix in webapp index.html

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -48,7 +48,8 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <img class="pull-left" src="images/logo.jpg">
-          <p class="navbar-brand">&nbsp;Terminology Server Demo</p>
+          <p class="navbar-brand">&nbsp;Terminology Server Demo and <a href="swagger.html" target="_blank">API Documentation</a></p>
+         
         </div>
       </div>
     </nav>
@@ -110,7 +111,7 @@
                   ng-click="findConcepts(terminology, conceptQuery)">Search</button>
                 <button class="btn btn-small btn-warning" type="cancel"
                   ng-click="conceptQuery = null">Clear</button>
-                <br> z<em>Searchable terms include concept names, e.g.
+                  <br><em>Searchable terms include concept names, e.g.
                   ossification, and concept ids, e.g. 728.1 (for ICD9CM),
                   102276005 (for SNOMEDCT)</em></td>
 
