--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -42,7 +42,7 @@
 
     <!--  header -->
 
-    <nav style="background-color: #FFFFFF"
+    <nav  style="background: #00008A url('images/background.jpg'); "
       class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
