--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -42,20 +42,25 @@
 
     <!--  header -->
 
-    <nav  style="background: #00008A url('images/background.jpg'); "
+    <nav style="background: #00008A url('images/background.jpg');"
       class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <img class="pull-left" src="images/logo.jpg">
-          <p class="navbar-brand">&nbsp;Terminology Server Demo and <a href="swagger.html" target="_blank">API Documentation</a></p>
-         
+        <div >
+          <img
+            style="background-color: white; border: 3px solid white; border-radius: 5px; margin-left: 133px; margin-top: 14px;"
+            class="pull-left" src="images/logo.jpg">
+          <b class="navbar-brand" style="color: white; margin-top: 60px ;">
+            &nbsp;Terminology Server Demo and <a href="swagger.html" style="color: white;"
+              target="_blank">API Documentation</a>
+          </b>
+
         </div>
       </div>
     </nav>
 
 
-    <div class="ts-container">
+    <div class="ts-container" style="margin-top: 50px">
 
       <!-- Error Messages -->
       <div id="errorMsg" class="border-error alert-error"
@@ -80,9 +85,11 @@
                 placeholder="Password" ng-model="password" /><br>
               <button style="margin-top: 10px;" id="userLoginButton"
                 type="submit" ng-click="login(userName, password)">Login</button>
-              <p><a
-                href="https://uts.nlm.nih.gov/license.html#emailTemporaryPassword">Forgot
-                Password?</a></p>
+              <p>
+                <a
+                  href="https://uts.nlm.nih.gov/license.html#emailTemporaryPassword">Forgot
+                  Password?</a>
+              </p>
 
             </form>
           </div>
@@ -111,7 +118,8 @@
                   ng-click="findConcepts(terminology, conceptQuery)">Search</button>
                 <button class="btn btn-small btn-warning" type="cancel"
                   ng-click="conceptQuery = null">Clear</button>
-                  <br><em>Searchable terms include concept names, e.g.
+                <br>
+                <em>Searchable terms include concept names, e.g.
                   ossification, and concept ids, e.g. 728.1 (for ICD9CM),
                   102276005 (for SNOMEDCT)</em></td>
 
@@ -125,9 +133,9 @@
         <div class="container-fluid"">
 
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
 
-              <div class="alert alert-success" style="heighth: 15px"
+              <div class="alert alert-success" 
                 ng-show="searchResults.length > 0">
                 {{searchResults.length}} Results (Click a row for details)</div>
 
@@ -136,7 +144,7 @@
                 ng-show="searchResults.length == 0">Search returned no
                 results.</div>
 
-              <table class="table table-hover"
+              <table class="table table-hover" 
                 ng-show="searchResults.length > 0">
 
                 <tbody>
@@ -152,10 +160,10 @@
               </table>
             </div>
 
-            <div class="col-md-1" ng-show="component != null"
+            <div class="col-md-2" ng-show="component != null"
               style="border-left: 1px solid #d9edf7; border-right: 1px solid #d9edf7;">
 
-              <div class="dropdown alert alert-info">
+              <div class="dropdown alert alert-info" >
                 <div class="dropdown-toggle">
                   View: {{navSelected}} <span class="caret"></span>
                 </div>
@@ -240,7 +248,7 @@
 
 
 
-            <div class="col-md-6" ng-show="component != null">
+            <div class="col-md-7" ng-show="component != null">
               <div class="alert alert-info">Viewing {{componentType}}
                 {{component.terminologyId}}</div>
 
@@ -266,8 +274,7 @@
       <div class="navbar-header">
         <ul class="nav navbar-nav navbar-left">
           <li><p class="navbar-text">
-              <a class="navbar-link" href="${deploy.footer.link}"> SNOMEDCT
-                Content Copyright @2015 IHTSDO </a>
+              <a class="navbar-link" href="${deploy.footer.link}">Copyright @2015</a>
             </p></li>
           <li>
             <div style="text-align: center; padding: 5px; margin: 0 0 0 0;"
