--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -5,7 +5,8 @@
 <title>Terminology Server Demonstration Portal</title>
 <style type="text/css" media="all"></style>
 
-
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="images/favicon.png" />
 
 <!-- Bootstrap core CSS  -->
 <link href="ui/components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
