More fixes to get webapp working properly again.

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -48,12 +48,13 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div>
+        <a href="http://www.westcoastinformatics.com">
           <img
             style="background-color: white; border: 3px solid white; border-radius: 5px; margin-left: 133px; margin-top: 14px;"
             class="pull-left" src="images/logo.jpg"> <b
-            class="navbar-brand" style="color: white; margin-top: 60px;">
+            class="navbar-brand" style="color: white; margin-top: 60px;"></a>
             &nbsp;Terminology Server Demo and <a href="swagger.html"
-            style="color: white;" target="_blank">API Documentation</a>
+            style="color: white; text-decoration: underline" target="_blank">API Documentation</a>
           </b>
 
         </div>
@@ -300,7 +301,7 @@
         <div class="container-fluid"">
 
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
 
 
 
