Support for logout.

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -103,7 +103,8 @@
               The mini version of SNOMED contains about 10K concepts. Due to the
               use of IP restricted content, we require users to authenticate
               with an NLM UTS account to ensure they have agreed to the UMLS
-              License.
+              License. We are a UMLS authorized content distributor.
+              
               </p>
               <p style="max-width: 400px">
                 To obtain a UTS account, visit <a href="http://uts.nlm.nih.gov">http://uts.nlm.nih.gov</a>
@@ -341,7 +342,7 @@
                 @2015</a>
             </p></li>
           <li>
-            <button class="btn btn-sm btn-primary btn-structure"
+            <button class="btn btn-sm btn-primary btn-structure" style="margin-top: 10px"
                     ng-click="logout()" ng-show="authToken != null">Logout</button>
           </li>
           <li>
