--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -48,14 +48,13 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div>
-        <a href="http://www.westcoastinformatics.com">
-          <img
-            style="background-color: white; border: 3px solid white; border-radius: 5px; margin-left: 133px; margin-top: 14px;"
+          <a href="http://www.westcoastinformatics.com"> <img
+            style="background-color: white; border: 3px solid white; border-radius: 5px; margin-left: 58px; margin-top: 14px;"
             class="pull-left" src="images/logo.jpg"> <b
             class="navbar-brand" style="color: white; margin-top: 60px;"></a>
-            &nbsp;Terminology Server Demo and <a href="swagger.html"
-            style="color: white; text-decoration: underline" target="_blank">API Documentation</a>
-          </b>
+          &nbsp;Terminology Server Demo and <a href="swagger.html"
+            style="color: white; text-decoration: underline" target="_blank">API
+            Documentation</a> </b>
 
         </div>
       </div>
@@ -87,27 +86,27 @@
                 placeholder="Password" ng-model="password" /><br>
               <button style="margin-top: 10px;" id="userLoginButton"
                 type="submit" ng-click="login(userName, password)">Login</button>
-              <p>
+              <p style="margin-top:5px">
                 <a
                   href="https://uts.nlm.nih.gov/license.html#emailTemporaryPassword">Forgot
                   Password?</a>
               </p>
-              <p style="margin-top: 50px; max-width: 500px">This
-                demonstration app is loaded with data from two terminologies.
-                </p>
+              <p style="margin-top: 25px; max-width: 500px">This
+                demonstration app is loaded with data from two terminologies.</p>
               <ul>
                 <li>ICD9CM, 2013</li>
                 <li>SNOMEDCT, 20140731 (mini edition)</li>
               </ul>
-              <p style="max-width: 400px">
-              The mini version of SNOMED contains about 10K concepts. Due to the
-              use of IP restricted content, we require users to authenticate
-              with an NLM UTS account to ensure they have agreed to the UMLS
-              License. We are a UMLS authorized content distributor.
-              
-              </p>
+              <p style="max-width: 400px">The mini version of SNOMED
+                contains about 10K concepts. Due to the use of IP restricted
+                content, we require users to authenticate with an NLM UTS
+                account to ensure they have agreed to the UMLS License. We are a
+                UMLS authorized content distributor.</p>
               <p style="max-width: 400px">
                 To obtain a UTS account, visit <a href="http://uts.nlm.nih.gov">http://uts.nlm.nih.gov</a>
+              </p>
+              <p style="max-width: 400px">
+                Disclaimer: this is not an official <a href="http://www.ihtsdo.org">IHTSDO</a> site.
               </p>
             </form>
           </div>
@@ -318,10 +317,10 @@
                     <td>{{item.name}}</td>
                     <td><table>
                         <tr ng-repeat="pair in item.keyValuePair">
-                          <td style="padding-right:15px;">{{pair.key}}</td>
+                          <td style="padding-right: 15px;">{{pair.key}}</td>
                           <td>{{pair.value}}</td>
                         </tr>
-                        </table>
+                      </table>
                 </tbody>
               </table>
 
@@ -342,8 +341,9 @@
                 @2015</a>
             </p></li>
           <li>
-            <button class="btn btn-sm btn-primary btn-structure" style="margin-top: 10px"
-                    ng-click="logout()" ng-show="authToken != null">Logout</button>
+            <button class="btn btn-sm btn-primary btn-structure"
+              style="margin-top: 10px" ng-click="logout()"
+              ng-show="authToken != null">Logout</button>
           </li>
           <li>
             <div style="text-align: center; padding: 5px; margin: 0 0 0 0;"
@@ -359,7 +359,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li>
             <p class="navbar-text">Presented for demonstration purposes by
-              West Coast Informatics, LLC</p>
+              <a href="http://www.westcoastinformatics.com">West Coast Informatics, LLC</a></p>
           </li>
         </ul>
       </div>
