--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Terminology Server Demonstration Portal</title>
+<title>SNOMED/RF2 Terminology Server Demo</title>
 <style type="text/css" media="all"></style>
 
 <!-- Favicon -->
@@ -52,7 +52,7 @@
             style="background-color: white; border: 3px solid white; border-radius: 5px; margin-left: 58px; margin-top: 14px;"
             class="pull-left" src="images/logo.jpg"> <b
             class="navbar-brand" style="color: white; margin-top: 60px;"></a>
-          &nbsp;Terminology Server Demo and <a href="swagger.html"
+          &nbsp;SNOMED/RF2 Terminology Server Demo and <a href="swagger.html"
             style="color: white; text-decoration: underline" target="_blank">API
             Documentation</a> </b>
 
