--- a/rest/src/main/webapp/swagger.html
+++ b/rest/src/main/webapp/swagger.html
@@ -58,7 +58,7 @@
   <div id='header' style="background: #00008A url('images/background.jpg'); ">
     <div class="swagger-ui-wrap">
       <img style="background-color: white; margin-left: 58px; border: 3px solid white; border-radius: 5px;" class="pull-left"
-        src="images/logo.jpg" > <b style="margin-bottom: 35px; color: white;"> SNOMED Terminology Server REST API</b>
+        src="images/logo.jpg" > <b style="margin-bottom: 35px; color: white;"> SNOMED/RF2 Terminology Server REST API</b>
     </div>
   </div>
 
