--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -350,7 +350,7 @@
               style="margin-top: 10px" ng-click="logout()"
               ng-show="authToken != null">Logout</button>
           </li>
-          <li>${project.version}</li>
+          <li>&nbsp;<p class="navbar-text">${project.version}</p></li>
           <li>
             <div style="text-align: center; padding: 5px; margin: 0 0 0 0;"
               class="alert alert-danger" ng-show="glassPane < 0">
