--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -112,7 +112,9 @@
               <p>
                 For complete documentation, see the <a
                   href="http://wiki.terminology.tools/confluence/display/TS/TermServer+Home">SNOMED/RF2
-                  Terminology Server wiki</a>.
+                  Terminology Server wiki</a>.</p>
+                  <p>For support, email: <a href="mailto:info@westcoastinformatics.com">info@westcoastinformatics.com</a>
+
             </form>
           </div>
 
