--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -112,8 +112,11 @@
               <p>
                 For complete documentation, see the <a
                   href="http://wiki.terminology.tools/confluence/display/TS/TermServer+Home">SNOMED/RF2
-                  Terminology Server wiki</a>.</p>
-                  <p>For support, email:<a href="mailto:info@westcoastinformatics.com">info@westcoastinformatics.com</a>
+                  Terminology Server wiki</a>.
+              </p>
+              <p>
+                For support, email:<a
+                  href="mailto:info@westcoastinformatics.com">info@westcoastinformatics.com</a>
             </form>
           </div>
 
@@ -351,7 +354,9 @@
               style="margin-top: 10px" ng-click="logout()"
               ng-show="authToken != null">Logout</button>
           </li>
-          <li>&nbsp;<p class="navbar-text">${project.version}</p></li>
+          <li>&nbsp;
+            <p class="navbar-text">${project.version}</p>
+          </li>
           <li>
             <div style="text-align: center; padding: 5px; margin: 0 0 0 0;"
               class="alert alert-danger" ng-show="glassPane < 0">
