--- a/rest/src/main/webapp/swagger.html
+++ b/rest/src/main/webapp/swagger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>IHTSDO Mapping Tool - Swagger UI</title>
+<title>SNOMED/RF2 Terminology Server - Swagger UI</title>
 <link rel="icon" type="image/png" href="images/favicon.png" />
 <link href='//fonts.googleapis.com/css?family=Droid+Sans:400,700'
   rel='stylesheet' type='text/css' />
