--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -45,17 +45,29 @@
 
     <nav style="background: #00008A url('images/background.jpg');"
       class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div>
-          <a href="http://www.westcoastinformatics.com"> <img
-            style="background-color: white; border: 3px solid white; border-radius: 5px; margin-left: 58px; margin-top: 14px;"
-            class="pull-left" src="images/logo.jpg"> <b
-            class="navbar-brand" style="color: white; margin-top: 60px;"></a>
-          &nbsp;SNOMED/RF2 Terminology Server Demo and <a href="swagger.html"
-            style="color: white; text-decoration: underline" target="_blank">API
-            Documentation</a> </b>
-
+        <div class="row">
+          <div class="col-md-1">
+            <a class="navbar-brand" href="http://www.westcoastinformatics.com"> 
+            <img
+              class="hidden-xs"
+              style="background-color: white; padding: 5px; margin: 5px; border-radius: 5px;"
+              src="images/logo65x72.jpg">
+            <img
+              class="visible-xs"
+              style="background-color: white; padding: 3px; margin: 3px; border-radius: 3px;"
+              src="images/logo36x40.jpg"></a>
+          </div>
+          <div class="col-md-6 col-md-offset-1" style="vertical-align: bottom">
+            <b
+              style="color: white;">
+              &nbsp;SNOMED/RF2 Terminology Server Demo and <a
+              href="swagger.html"
+              style="color: white; text-decoration: underline" target="_blank">API
+                Documentation</a>
+            </b>
+          </div>
         </div>
       </div>
     </nav>
