--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Language" content="en" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SNOMED/RF2 Terminology Server Demo</title>
+<title>SNOMED Terminology Server Demo (RF2)</title>
 <style type="text/css" media="all"></style>
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="images/favicon.png" />
